--- a/src/react-player.css
+++ b/src/react-player.css
@@ -6,7 +6,6 @@
   font-family: inherit;
   width: 100%;
   padding: 10px 15px;
-  background-color: #fff;
 }
 .rhap_container:focus:not(:focus-visible) {
   outline: 0;
@@ -79,13 +78,13 @@
 }
 
 .rhap_time {
-  color: #333;
   margin-top: 10px;
   font-size: 16px;
   user-select: none;
   -webkit-user-select: none;
   grid-row-start: 2;
   grid-row-end: 3;
+  @apply text-black dark:text-white;
 }
 
 .rhap_total-time {
